tests/snapshots/examples_fixtures/aoc__2024__day02_part1_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day02_part1_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day02_part1_test.flx:18:5
   |
18 |     assert_eq(Day02.day02a(sample_reports()), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  examples/aoc/2024/day02_part1_test.flx:22:5
   |
22 |     assert_true(Day02.predicate(Day02.parse_report("7 6 4 2 1")))
   |     ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  examples/aoc/2024/day02_part1_test.flx:26:5
   |
26 |     assert_true(Day02.predicate(Day02.parse_report("1 3 6 7 9")))
   |     ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_false`.

  examples/aoc/2024/day02_part1_test.flx:30:5
   |
30 |     assert_false(Day02.predicate(Day02.parse_report("1 3 2 4 5")))
   |     ^^^^^^^^^^^^

Hint:
  Define it first: let assert_false = ...;

Found 4 errors.
== stdout ==
<not executed>
